# home

./: .bash_profile  .bashrc  .gitignore  .gvimrc  .screenrc  .tmux.conf  .vimrc  .vimrc_for_dns  .vimshrc  .vrapperrc  .zshrc  Makefile  README.md  install_tmux.sh  motd  setup_cent.sh  setup_centos.sh  setup_dotfiles.sh  setup_ubuntu.sh  setup_win.bat  setup_win_clone_neobundle.sh
.gometalinter/: config.json
.nvim/: README.md  coc-settings.json  init.vim
.nvim/dein/: dein.toml  dein_lazy.toml
.nvim/docs/: README.md
.nvim/rc/: keymap.vim  (+3 more)
.vim/: .netrwhist
.zsh/: README.md  cmds.zsh  extensions.zsh  fabkit.zsh  go.zsh  js.zsh
docs/: @  README.md  centos.md  container.md  docker.md  git.md  initscript.md  makeindex.go  mysql.md  setup_ubuntu.md  setup_windows.md  virt.md  windows.md
docs_env/: keybind.md
docs_ops/: README.md
dotfiles/: .bash_profile  .envrc  .tmux.conf  .zshrc  README.md  tmux.md
env/: pyproject.toml
env_docs/: README.md  keybind.md  vim.md  vim_script.md
etc/: README.md
home/: .envrc  README.md
home_legacy/: .bash_profile  .zshrc  README.md
legacy_dotfiles/: .bash_profile  .tmux.conf  .zshrc  Makefile  README.md
local_container/: Dockerfile  README.md  docker-compose.yml
local_devcontainer/: Dockerfile  README.md  docker-compose.yml
motd/: linka  linux_system
playground/: Makefile  README.md  docker-compose.yaml
python_tools/: README.md  pyproject.toml
scripts/: check.sh  confrc  gen_keybind_doc.go  setup.sh  setup_common.sh  setup_rocky9.sh  setup_ubuntu24.sh
teraterm/: TERATERM.INI
xdgconfig/: README.md
(+611 files in other folders)
