[project]
name = "env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
]

nvim = [
    "neovim>=0.3.1",
    "neovim-remote>=2.5.1",
    "pynvim>=0.6.0",
]
